--- a/game.css
+++ b/game.css
@@ -49,10 +49,11 @@ output {
     padding: 5%;
     border: 3px groove gray;
     border-radius: 1em;
+    background-color: rgba(255,255,255,0.75)
 }
 
 output, input {
-    font-size: 250%;
+    font-size: 230%;
     font-family: cursive;
 }
 
